
 * src/editor.c, src/ui_utils.c:
   When the global auto-indent style pref is disabled, disable
   auto-indentation for all editors.
   Don't disable the auto-indent document pref when switching back to a
   document with auto-indent turned off.
 * src/editor.c:
   Fix HTML table autocompletion when the indent type is 'Tabs &
   Spaces' (#2118289).
   Add some useful functions count_indent_size(),
   string_append_indent_width().


2008-09-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * document.c, document.h, editor.c, editor.h, prefs.c, sciwrappers.c,
   sciwrappers.h:
   Move document_apply_update_prefs() in editor.c.
   Refactor get_indent_guides_from_lexer() from sciwrappers.c in
   editor_set_indentation_guides().
 * src/editor.c:
   Fix broken indentation of automatic HTML table tag completion
   (part of #2118289).


2008-09-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sciwrappers.c:
   Disable indent guides for the Diff filetype, as they can be
   distracting as added/removed lines don't get them.
 * src/plugindata.h:
   Remove 2 unnecessary deprecated macros.
 * src/filetypes.c, src/filetypes.h:
   Add GeanyFiletypePrivate instead of using inheritance for non-public
   fields (this was unnecessary and meant using ugly casts).


2008-09-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Display also the style of the current position in the status bar
   when debug mode is enabled.
   No need to make the debugging strings translatable in the status bar.
 * src/editor.c, src/plugins.c, src/sciwrappers.c, src/sciwrappers.h:
   Rename the new indicator functions and add documentation comment.
 * src/msgwindow.c:
   Handle error messages and warnings from the mcs (Mono) compiler like
   those from Pascal or Basic compilers.


2008-09-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Use wrap label for the first label in the plugin manager dialog.